Closed Bug 1535631 Opened 7 years ago Closed 7 years ago

Crash in [@ dav1d_ipred_z3_avx2.h32]

Categories

(Core :: Audio/Video: Playback, defect, P1)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- fixed
firefox68 --- fixed

People

(Reporter: marcia, Assigned: achronop)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-8ab80a84-84d0-4137-b8f0-ebdcc0190314.

Seen while looking at nightly crash stats - there are a series of 10.14 crashes happening with somewhat similar signatures: https://bit.ly/2Ffsy3p. The crashes seemed to have started in 20190314094420.

Possible regression range based on build id: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=aecc707103590186a2a7fa5d002849f443417e59&tochange=49d94c83bb220524a370fc7f7734de7e7307016b

Top 10 frames of crashing thread:

0 XUL dav1d_ipred_z3_avx2.h32 
1 XUL decode_b third_party/dav1d/src/decode.c:711
2 XUL decode_sb third_party/dav1d/src/decode.c
3 XUL decode_sb third_party/dav1d/src/decode.c:2054
4 XUL dav1d_decode_tile_sbrow third_party/dav1d/src/decode.c:2430
5 XUL dav1d_decode_frame third_party/dav1d/src/decode.c:2894
6 XUL dav1d_frame_task third_party/dav1d/src/thread_task.c:44
7 libsystem_pthread.dylib libsystem_pthread.dylib@0x3338 
8 libsystem_pthread.dylib libsystem_pthread.dylib@0x62a6 
9 libsystem_pthread.dylib libsystem_pthread.dylib@0x2444 

This must be a regression of Bug 1535038.

See Also: → 1533559
Crash Signature: [@ dav1d_ipred_z3_avx2.h32] [@ dav1d_ipred_smooth_h_avx2.prep] [@ dav1d_ipred_z1_avx2.w8] → [@ dav1d_ipred_z3_avx2.h32] [@ dav1d_ipred_smooth_h_avx2.prep] [@ dav1d_ipred_z1_avx2.w8] [@ dav1d_ipred_smooth_avx2.prep_v] [@ dav1d_ipred_z3_avx2.h16_3tap]
Rank: 8
Priority: -- → P1

The crash has been reported upstream in [1]. Nevertheless, the first step is to get dav1d updated from upstream in case this is something already solved. The update is happening in Bug 1533559.

[1] https://code.videolan.org/videolan/dav1d/issues/265

Crash Signature: [@ dav1d_ipred_z3_avx2.h32] [@ dav1d_ipred_smooth_h_avx2.prep] [@ dav1d_ipred_z1_avx2.w8] [@ dav1d_ipred_smooth_avx2.prep_v] [@ dav1d_ipred_z3_avx2.h16_3tap] → [@ dav1d_ipred_z3_avx2.h32] [@ dav1d_ipred_z1_avx2.w32] [@ dav1d_ipred_smooth_h_avx2.prep] [@ dav1d_ipred_z1_avx2.w8] [@ dav1d_ipred_smooth_avx2.prep_v] [@ dav1d_ipred_z3_avx2.h16_3tap] [@ dav1d_ipred_z1_avx2.w16_3tap]

Alex, are you the correct assignee for this crash?

Flags: needinfo?(achronop)

Yeah, I am taking it on my name. Thanks!

Assignee: nobody → achronop
Flags: needinfo?(achronop)

Do we have RDD on mac?

Flags: needinfo?(achronop)

Yes, RDD is a hard requirement for av1 and dav1d.

Flags: needinfo?(achronop)
See Also: → 1537725
Pushed by achronopoulos@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2b9f4f5a2786 Use 16 byte stack alignment on dav1d in OSX. r=TD-Linux
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Hi Alex, since 67 is marked as affected, should we consider uplifting this to Beta67?

Flags: needinfo?(achronop)

Yes, we need to uplift this one, but we need other uplifts first. The uplift of Bug 1533559 is the first needed and the most important, then we need Bug 1536538 and 1536070.

Flags: needinfo?(achronop)

Comment on attachment 9052614 [details]
Bug 1535631 - Use 16 byte stack alignment on dav1d in OSX. r?TD-Linux

Beta/Release Uplift Approval Request

  • Feature/Bug causing the regression: Bug 1535038
  • User impact if declined: Crash on dav1d decoder. Without it we cannot enable dav1d on beta.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: Bug 1536538
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is low risk because the risk has been verified in Nightly for some time now.
  • String changes made/needed:
Attachment #9052614 - Flags: approval-mozilla-beta?

Comment on attachment 9052614 [details]
Bug 1535631 - Use 16 byte stack alignment on dav1d in OSX. r?TD-Linux

Crash fix, patch needed for the libdav1d update to 0.2.1 on beta. Uplift accepted for 67 beta 8, thanks.

Attachment #9052614 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: