Bug 1535631 - Use 16 byte stack alignment on dav1d in OSX. r=TD-Linux a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D24382